[package]
name = "student-performance-analysis"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.2"
ndarray = "0.15"
linfa = "0.6"
linfa-clustering = "0.6"
linfa-linear = "0.6"
plotters = "0.3"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"

[dev-dependencies]
tempfile = "3.8"
